--- a/src/Inventory.ViewModels/Inventory.ViewModels.csproj
+++ b/src/Inventory.ViewModels/Inventory.ViewModels.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.6.1" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Inventory.Data\Inventory.Data.csproj" />
   </ItemGroup>
-
 </Project>
